--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,9 @@ build-backend = "setuptools.build_meta"
 name = "bluesky-testing-ground"
 version = "0.1.0"
 description = "Bluesky Ophyd virtual instruments and triple-axis spectrometer devices"
-authors = [
-    {name = "Contributors", email = "example@example.com"}
-]
+authors = [{ name = "Contributors", email = "example@example.com" }]
 readme = "README.md"
-license = {text = "MIT"}
+license = { text = "MIT" }
 requires-python = ">=3.8"
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -30,20 +28,12 @@ dependencies = [
     "numpy>=1.19.0",
     "matplotlib>=3.3.0",
     "pyepics",
+    "neutron-tavi>=0.3.0.dev36,<0.4",
 ]
 
 [project.optional-dependencies]
-test = [
-    "pytest",
-    "pytest-cov",
-]
-dev = [
-    "pytest",
-    "pytest-cov",
-    "black",
-    "flake8",
-    "isort",
-]
+test = ["pytest", "pytest-cov"]
+dev = ["pytest", "pytest-cov", "black", "flake8", "isort"]
 
 [tool.setuptools.packages.find]
 where = ["."]
@@ -82,3 +72,23 @@ extend-exclude = '''
 profile = "black"
 multi_line_output = 3
 line_length = 88
+
+[tool.pixi.workspace]
+channels = ["conda-forge"]
+platforms = ["osx-arm64", "linux-64"]
+
+[tool.pixi.pypi-dependencies]
+bluesky-testing-ground = { path = ".", editable = true }
+
+[tool.pixi.environments]
+default = { solve-group = "default" }
+dev = { features = ["dev"], solve-group = "default" }
+test = { features = ["test"], solve-group = "default" }
+
+[tool.pixi.tasks]
+
+[tool.pixi.dependencies]
+python = "3.10.*"
+jupyterlab = ">=4.4.6,<5"
+tiled-client = ">=0.1.0a117,<0.2"
+tiled-server = ">=0.1.0a117,<0.2"
